[package]
name = "cowi"
version = "0.1.0"
edition = "2021"
author = ["ryuma017 <tgcrym01@gmail.com>"]
description = "A interpreter for COW programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.10", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
